// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/devices/deviceSettings matches snapshot while interface cannot be found 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.close",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceSettings.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Route
    component={[Function]}
  />
  <Connect(InterfaceNotFoundMessageBox) />
</Fragment>
`;

exports[`components/devices/deviceSettings matches snapshot with one twinWithSchema 1`] = `
<Fragment>
  <StyledCommandBarBase
    className="command"
    farItems={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.close",
          "iconProps": Object {
            "iconName": "NavigateBack",
          },
          "key": "NavigateBack",
          "name": "deviceSettings.command.close",
          "onClick": [Function],
        },
      ]
    }
    items={
      Array [
        Object {
          "ariaLabel": "deviceSettings.command.refresh",
          "iconProps": Object {
            "iconName": "Refresh",
          },
          "key": "Refresh",
          "name": "deviceSettings.command.refresh",
          "onClick": [Function],
        },
      ]
    }
  />
  <Route
    component={[Function]}
  />
  <DeviceSettingsPerInterface
    componentName="environmentalSensor"
    deviceId={null}
    history={
      Object {
        "location": Object {
          "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
        },
      }
    }
    interfaceId="urn:contoso:com:EnvironmentalSensor:1"
    isLoading={false}
    location={
      Object {
        "pathname": "/#/devices/detail/digitalTwins/settings/?id=device1&interfaceId=urn:contoso:com:EnvironmentalSensor:1",
      }
    }
    match={Object {}}
    patchDigitalTwinInterfaceProperties={[MockFunction]}
    refresh={[MockFunction]}
    setComponentName={
      [MockFunction] {
        "calls": Array [
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
          Array [
            null,
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    twinWithSchema={
      Array [
        Object {
          "desiredTwin": 123,
          "reportedTwin": null,
          "settingModelDefinition": Object {
            "@type": "Property",
            "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "displayName": "Brightness Level",
            "name": "brightness",
            "schema": "long",
            "writable": true,
          },
          "settingSchema": Object {
            "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
            "title": "brightness",
            "type": "number",
          },
        },
      ]
    }
  />
</Fragment>
`;

exports[`devicePropertiesPerInterface matches snapshot 1`] = `
<div
  className="pnp-detail-list scrollable-lg ms-Grid"
>
  <div
    className="list-detail non-writable-properties"
  >
    <StyledWithViewportComponent
      checkboxVisibility={2}
      columns={
        Array [
          Object {
            "fieldName": "name",
            "isMultiline": true,
            "isResizable": true,
            "key": "name",
            "maxWidth": 500,
            "minWidth": 100,
            "name": "deviceProperties.columns.name",
          },
          Object {
            "fieldName": "schema",
            "isMultiline": true,
            "isResizable": true,
            "key": "schema",
            "maxWidth": 200,
            "minWidth": 100,
            "name": "deviceProperties.columns.schema",
          },
          Object {
            "fieldName": "unit",
            "isMultiline": true,
            "isResizable": true,
            "key": "unit",
            "maxWidth": 200,
            "minWidth": 100,
            "name": "deviceProperties.columns.unit",
          },
          Object {
            "fieldName": "value",
            "isMultiline": true,
            "isResizable": true,
            "key": "value",
            "minWidth": 150,
            "name": "deviceProperties.columns.value",
          },
        ]
      }
      items={
        Array [
          Object {
            "propertyModelDefinition": Object {
              "@type": "Property",
              "description": "The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "displayName": "Brightness Level",
              "name": "brightness",
              "schema": "long",
              "writable": true,
            },
            "propertySchema": Object {
              "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
              "title": "brightness",
              "type": "number",
            },
            "reportedTwin": null,
          },
        ]
      }
      layoutMode={1}
      onRenderItemColumn={[Function]}
    />
  </div>
</div>
`;
